fixed interest tag and clipping date/time issues with dashboard, as well as styling margins for interest tags

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -54,7 +54,6 @@
 }
 
 .rec-sec{
-    margin: 0 12%;
     height: 600px;
     background-color: var(--Light-Grey); 
     min-width: 1000px;
@@ -69,10 +68,11 @@
     margin: 90px 12%;
     background-color: var(--UofT-Blue); 
     height: 1100px;
+    min-width: 1000px;
 }
 .cards{
-    margin-left: 12%;
-    margin-right: 12%;
+    margin: 0 12%;
+    justify-content: center;
 }
 
 .s3{
@@ -297,6 +297,7 @@ hr.underline_upp {
     margin-left: 35px;
     margin-bottom:0px;
     max-width: 180px;
+    min-height: 110px;
     max-height: 110px;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -331,9 +332,7 @@ hr.underline_upp {
 
 .date_time_top{
     margin-top: 42px;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    text-wrap: nowrap;
+
 }
 .date_time_date{
     color: #000000;
@@ -341,9 +340,6 @@ hr.underline_upp {
     font-family: Inter;
     font-weight: 400;
     text-align: left;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    text-wrap: nowrap;
 }
 
 .date_time_time{
@@ -352,9 +348,6 @@ hr.underline_upp {
     font-family: Inter;
     font-weight: 100;
     text-align: right;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    text-wrap: nowrap;
 }
 
 .interest-tag{
@@ -398,21 +391,28 @@ hr.underline_upp {
     color: #000000;
 }
 
-@media (max-width: 1466px) {
 
 .card.medium:hover{
     background-color: var(--Mint);
     transition: 0.5s;
     height: 390px;
 }
+.card_hover{
+    display: none;
+    margin-top: 28px;
+    margin-right: 35px;
+    margin-left: 35px;
+    margin-bottom: 0px;
+}
 
 .card.medium:hover .card_hover{
+    display: block;
     opacity: 1;
     transition: opacity 0.8s;
 }
 
 .card.medium:hover .card_normal{
-    opacity: 0;
+    display: none;
 }
 
 .upcoming_card:hover   {
